// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Decoders view (spec §6.2) > golden: 120x40 with readsb detail as a bottom pane 1`] = `
" api ● 2s  iq ● streaming · 4.1 MB/s  rx 445.971 MHz ±1.024  decoders 8/9 up · 1 restarting · 2 in window  drops !21%
 1 Overview  2 Decoders  3 Messages  4 Receiver  5 System

   DECODERS          process     restarts  errors  decodes          events      iq in  drop now  lifetime  window
 ● dsd-fme           up 52s             0       0  2/min · 11s ago       3   831.5 MB       12%       36%  in
 ● multimon-ng       up 51s             0       0  1/min · 32s ago       2   761.1 MB       14%       39%  in
 ● rtl433            up 51s             0       0  none for 51s          0   625.9 MB      !15%       41%  out
 ● readsb            up 51s             0       6  none for 51s          0   570.6 MB      !38%       44%  out
 ! acarsdec          restarting        13       0  —                     0    43.5 MB         —         —  out
 ● ais-catcher       up 51s             0       0  none for 51s          0   832.5 MB      !31%       36%  out
 ● dumpvdl2          up 50s             0       0  none for 50s          0   656.8 MB      !40%       41%  out
 ● direwolf          up 50s             0       0  none for 50s          0   750.7 MB       11%       35%  out
 ● lora-meshtastic   up 50s             0       0  none for 50s          0   116.4 MB        9%       30%  out

 readsb    ADS-B · network producer · iq → jsonl · pid 1531
 process   up 51s · 0 restarts · 6 errors · health "idle"
 decodes   none since start (51s)
 iq        570.6 MB in · branch decoder-readsb · buffer 389.1 KB / 262.1 KB hwm · backpressure 0.2s · 121 episodes
 drops     38% now · 44% lifetime · 836.0 MB in 3 357 chunks · last drain 0.3s ago
 band      1090.000 MHz nominal · window 444.947–446.995 MHz · out of window
 activity  ····························▁▁  decodes/min · last 30 min · observed since 18:06

















 ↑↓ select  Esc close  x stop  R restart  r reconnect  q quit  ? help"
`;

exports[`Decoders view (spec §6.2) > golden: 200x50 with the detail as a right pane 1`] = `
" api ● 2s  iq ● streaming · 4.1 MB/s  rx 445.971 MHz ±1.024 · external control  decoders 8/9 up · 1 restarting · 2 in window  drops !21%                                                           18:07
 1 Overview  2 Decoders  3 Messages  4 Receiver  5 System

   DECODERS          process     restarts  errors  decodes          drop now  lifetime  band MHz          window  readsb    ADS-B · network producer · iq → jsonl · pid 1531
 ● dsd-fme           up 52s             0       0  2/min · 11s ago       12%       36%  tuned             in      process   up 51s · 0 restarts · 6 errors · health "idle"
 ● multimon-ng       up 51s             0       0  1/min · 32s ago       14%       39%  tuned             in      decodes   none since start (51s)
 ● rtl433            up 51s             0       0  none for 51s         !15%       41%  433.920           out     iq        570.6 MB in · branch decoder-readsb · buffer 389.1 KB / 262.1 KB hwm
 ● readsb            up 51s             0       6  none for 51s         !38%       44%  1090.000          out               backpressure 0.2s · 121 episodes
 ! acarsdec          restarting        13       0  —                       —         —  131.550–131.825*  out     drops     38% now · 44% lifetime · 836.0 MB in 3 357 chunks · last drain 0.3s ago
 ● ais-catcher       up 51s             0       0  none for 51s         !31%       36%  161.975/162.025   out     band      1090.000 MHz nominal · window 444.947–446.995 MHz · out of window
 ● dumpvdl2          up 50s             0       0  none for 50s         !40%       41%  136.650–136.975*  out     activity  ····························▁▁  decodes/min · last 30 min
 ● direwolf          up 50s             0       0  none for 50s          11%       35%  144.390/144.800   out
 ● lora-meshtastic   up 50s             0       0  none for 50s           9%       30%  869.525/906.875   out



































 ↑↓ select  Esc close  x stop  R restart  r reconnect  q quit  ? help"
`;

exports[`Decoders view (spec §6.2) > golden: crash-loop 120x40 1`] = `
" api ● 2s  iq ● streaming · 4.1 MB/s  rx 445.971 MHz ±1.024  decoders 8/9 up · 1 failing · 2 in window  drops !21%
 1 Overview  2 Decoders  3 Messages  4 Receiver  5 System

   DECODERS          process     restarts  errors  decodes          events      iq in  drop now  lifetime  window
 ● dsd-fme           up 52s             0       0  2/min · 11s ago       3   831.5 MB       12%       36%  in
 ● multimon-ng       up 51s             0       0  1/min · 32s ago       2   761.1 MB       14%       39%  in
 ● rtl433            up 51s             0       0  none for 51s          0   625.9 MB      !15%       41%  out
 ● readsb            up 51s             0       6  none for 51s          0   570.6 MB      !38%       44%  out
 × acarsdec          crash-loop        13       0  —                     0    43.5 MB         —         —  out
 ● ais-catcher       up 51s             0       0  none for 51s          0   832.5 MB      !31%       36%  out
 ● dumpvdl2          up 50s             0       0  none for 50s          0   656.8 MB      !40%       41%  out
 ● direwolf          up 50s             0       0  none for 50s          0   750.7 MB       11%       35%  out
 ● lora-meshtastic   up 50s             0       0  none for 50s          0   116.4 MB        9%       30%  out

























 ↑↓ select  Enter open  r reconnect  q quit  ? help"
`;
